// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List 🚏 ProList support rowClassName as a function 1`] = `
<div
  class="ant-pro-table ant-pro-list ant-pro-list ant-pro-list-no-split"
>
  <div
    class="ant-pro-card"
  >
    <div
      class="ant-pro-card-body"
      style="padding-top: 0px;"
    >
      <div
        class="ant-list ant-list-split ant-pro-list-container"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <ul
              class="ant-list-items"
            >
              <li
                class="ant-list-item ant-pro-list-row even"
              >
                <div
                  class="ant-pro-list-row-header"
                >
                  <div
                    class="ant-pro-list-row-header-option"
                  />
                  <div
                    class="ant-list-item-meta"
                  >
                    <div
                      class="ant-list-item-meta-content"
                    >
                      <h4
                        class="ant-list-item-meta-title"
                      >
                        <div
                          class="ant-pro-list-row-header-title"
                        >
                          <div
                            class="ant-pro-list-row-title"
                          >
                            我是名称
                          </div>
                        </div>
                      </h4>
                      <div
                        class="ant-list-item-meta-description"
                      >
                        <div
                          class="ant-pro-list-row-description"
                        >
                          desc text
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </li>
              <li
                class="ant-list-item ant-pro-list-row odd"
              >
                <div
                  class="ant-pro-list-row-header"
                >
                  <div
                    class="ant-pro-list-row-header-option"
                  />
                  <div
                    class="ant-list-item-meta"
                  >
                    <div
                      class="ant-list-item-meta-content"
                    >
                      <h4
                        class="ant-list-item-meta-title"
                      >
                        <div
                          class="ant-pro-list-row-header-title"
                        >
                          <div
                            class="ant-pro-list-row-title"
                          >
                            我是名称
                          </div>
                        </div>
                      </h4>
                      <div
                        class="ant-list-item-meta-description"
                      >
                        <div
                          class="ant-pro-list-row-description"
                        >
                          desc text
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`List 🚏 ProList support rowClassName as a string 1`] = `
<div
  class="ant-pro-table ant-pro-list ant-pro-list ant-pro-list-no-split"
>
  <div
    class="ant-pro-card"
  >
    <div
      class="ant-pro-card-body"
      style="padding-top: 0px;"
    >
      <div
        class="ant-list ant-list-split ant-pro-list-container"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <ul
              class="ant-list-items"
            >
              <li
                class="ant-list-item ant-pro-list-row rowClassName"
              >
                <div
                  class="ant-pro-list-row-header"
                >
                  <div
                    class="ant-pro-list-row-header-option"
                  />
                  <div
                    class="ant-list-item-meta"
                  >
                    <div
                      class="ant-list-item-meta-content"
                    >
                      <h4
                        class="ant-list-item-meta-title"
                      >
                        <div
                          class="ant-pro-list-row-header-title"
                        >
                          <div
                            class="ant-pro-list-row-title"
                          >
                            我是名称
                          </div>
                        </div>
                      </h4>
                      <div
                        class="ant-list-item-meta-description"
                      >
                        <div
                          class="ant-pro-list-row-description"
                        >
                          desc text
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`List 🚏 only has content 1`] = `
<div
  class="ant-pro-table ant-pro-list ant-pro-list ant-pro-list-no-split"
>
  <div
    class="ant-pro-card"
  >
    <div
      class="ant-pro-card-body"
      style="padding-top: 0px;"
    >
      <div
        class="ant-list ant-list-split ant-pro-list-container"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <ul
              class="ant-list-items"
            >
              <li
                class="ant-list-item ant-pro-list-row"
              >
                <div
                  class="ant-pro-list-row-header"
                >
                  <div
                    class="ant-pro-list-row-header-option"
                  />
                </div>
                <div
                  class="ant-pro-list-row-content"
                >
                  <div>
                    段落示意：蚂蚁金服设计平台 design.alipay.com，用最小的工作量，无缝接入蚂蚁金服生态，提供跨越设计与开发的体验解决方案。蚂蚁金服设计平台 design.alipay.com，用最小的工作量，无缝接入蚂蚁金服生态提供跨越设计与开发的体验解决方案。
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`List 🚏 only has description 1`] = `
<div
  class="ant-pro-table ant-pro-list ant-pro-list ant-pro-list-no-split"
>
  <div
    class="ant-pro-card"
  >
    <div
      class="ant-pro-card-body"
      style="padding-top: 0px;"
    >
      <div
        class="ant-list ant-list-split ant-pro-list-container"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <ul
              class="ant-list-items"
            >
              <li
                class="ant-list-item ant-pro-list-row"
              >
                <div
                  class="ant-pro-list-row-header"
                >
                  <div
                    class="ant-pro-list-row-header-option"
                  />
                  <div
                    class="ant-list-item-meta"
                  >
                    <div
                      class="ant-list-item-meta-content"
                    >
                      <div
                        class="ant-list-item-meta-description"
                      >
                        <div
                          class="ant-pro-list-row-description"
                        >
                          <span
                            class="ant-tag"
                          >
                            语雀专栏
                          </span>
                          <span
                            class="ant-tag"
                          >
                            设计语言
                          </span>
                          <span
                            class="ant-tag"
                          >
                            蚂蚁金服
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`List 🚏 show loading state 1`] = `
<div
  class="ant-pro-table ant-pro-list ant-pro-list ant-pro-list-no-split"
>
  <div
    class="ant-pro-card"
  >
    <div
      class="ant-pro-card-body"
      style="padding-top: 0px;"
    >
      <div
        class="ant-list ant-list-split ant-list-loading ant-pro-list-container"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div>
            <div
              class="ant-spin ant-spin-spinning"
            >
              <span
                aria-label="loading"
                class="anticon anticon-loading anticon-spin ant-spin-dot"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="loading"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="0 0 32 32"
                  width="1em"
                >
                  <path
                    d="M19.02.8a15.4 15.4 0 017.94 4.24A15.45 15.45 0 0131.5 16a15.45 15.45 0 01-12.48 15.2 1.5 1.5 0 01-.58-2.94 12.39 12.39 0 006.4-3.42A12.45 12.45 0 0028.5 16 12.45 12.45 0 0018.44 3.74a1.5 1.5 0 01.38-2.97l.2.02z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="ant-spin-container ant-spin-blur"
          >
            <ul
              class="ant-list-items"
            >
              <li
                class="ant-list-item ant-pro-list-row"
              >
                <div
                  class="ant-pro-list-row-header"
                >
                  <div
                    class="ant-pro-list-row-header-option"
                  />
                  <div
                    class="ant-list-item-meta"
                  >
                    <div
                      class="ant-list-item-meta-content"
                    >
                      <h4
                        class="ant-list-item-meta-title"
                      >
                        <div
                          class="ant-pro-list-row-header-title"
                        >
                          <div
                            class="ant-pro-list-row-title"
                          >
                            我是名称
                          </div>
                        </div>
                      </h4>
                      <div
                        class="ant-list-item-meta-description"
                      >
                        <div
                          class="ant-pro-list-row-description"
                        >
                          desc text
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
